Промежуточные junit тесты

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>7.4.3</version>
+        </dependency>
 
 
     </dependencies>
